cloud-devops-multi-cloud-deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-devops
  labels:
    name: cloud-devops
    project: cloud-devops-multi-cloud
    managed-by: kubectl
